--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -4996,3 +4996,27 @@ bRemoteConnAllowed.x64=ECAC4
 bMultimonAllowed.x64  =ECAC8
 ulMaxDebugSessions.x64=ECACC
 bFUSEnabled.x64       =ECAD0
+
+[10.0.22621.3672]
+SingleUserPatch.x64=1
+SingleUserOffset.x64=C4D3
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1C415
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=9EFB1
+LocalOnlyCode.x64=jmpshort
+SLInitHook.x64=1
+SLInitOffset.x64=2C040
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.22621.3672-SLInit]
+bServerSku.x64=12DF70
+bRemoteConnAllowed.x64=12DF84
+bFUSEnabled.x64=12DF94
+bAppServerAllowed.x64=12DF7C
+bMultimonAllowed.x64=12DF88
+lMaxUserSessions.x64=12DF74
+ulMaxDebugSessions.x64=12DF90
+bInitialized.x64=12DF6C
